--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-pandas>=2.2.3
-scikit-learn>=1.6.1
-xgboost>=3.0.0
-matplotlib>=3.10.1
-numpy>=2.2.3
-joblib>=1.4.2
-Flask>=3.1.0
-Flask-WTF>=1.2.2
-WTForms>=3.2.1
-Werkzeug>=3.1.3
-feature-engine>=1.8.3
-gunicorn>=23.0.0
+pandas==2.2.3
+scikit-learn==1.6.1
+xgboost==3.0.0
+matplotlib==3.10.1
+numpy==2.2.3
+joblib==1.4.2
+Flask==3.1.0
+Flask-WTF==1.2.2
+WTForms==3.2.1
+Werkzeug==3.1.3
+feature-engine==1.8.3
+gunicorn==23.0.0
